--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bit.temperatureapps">
+    <uses-feature android:name="android.hardware.usb.host"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <!-- measuring heartbeat -->
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.flash" />
 
     <application
         android:allowBackup="true"
@@ -15,8 +21,12 @@
             android:theme="@style/Theme.TemperatureApps.NoActionBar">
             <intent-filter>
 <!--                <action android:name="android.intent.action.MAIN" />-->
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
         </activity>
         <activity android:name=".SplashActivity"
             android:theme="@style/Theme.TemperatureApps.NoActionBar">
@@ -24,6 +34,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
