--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".HealthStatusActivity"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
